# Miniproject

./: .gitignore  .replit  README.md  admin_interface.py  app.py  college_bus_tracker.db  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  student_interface.py
.github/workflows/: python-package.yml
.streamlit/: config.toml
attached_assets/: Pasted-i-want-to-create-a-real-time-bus-tracking-management-system-for-my-college-it-should-have-2-interfa-1762347308868_1762347308869.txt
projects/collegebustracker/: .replit  Pasted-i-want-to-create-a-real-time-bus-tracking-management-system-for-my-college-it-should-have-2-interfa-1762347308868_1762347308869.txt  admin_interface.py  database.py  firebase_service.py  pyproject.toml  student_interface.py
