[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=7.1.0",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
    "streamlit-option-menu>=0.4.0",
]
